--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,16 @@
 {
-    "hosting": {
-        "public": "build",
-		"ignore": [
-			"firebase.json",
-			"**/.*",
-			"**./node_modules/**"
-		],
-        "rewrites": [
-            {
-                "source": "!{/src}/**",
-                "destination": "/index.html"
-            }
-        ]
-	}
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
