--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.2.0",
     "react-history": "^0.18.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-slideshow-image": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
