--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-chat-window": "^1.0.8",
     "react-dom": "^16.2.0",
     "react-history": "^0.18.2",
     "react-router-dom": "^4.2.2",
