Chatroom lagt till i databasen

--- a/package.json
+++ b/package.json
@@ -3,19 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "app-module-path": "^2.2.0",
     "bootstrap": "^4.0.0",
+    "electron": "^2.0.1",
     "firebase": "^4.12.1",
+    "hiredis": "^0.5.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.17",
+    "normalize.css": "^8.0.0",
     "npm": "^5.7.1",
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-chat-window": "^1.0.8",
+    "react-dates": "^16.7.0",
     "react-dom": "^16.2.0",
     "react-history": "^0.18.2",
+    "react-modal": "^3.4.4",
+    "react-moment": "^0.7.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-slideshow-image": "^0.2.2"
+    "react-slideshow-image": "^0.2.2",
+    "redux": "^4.0.0",
+    "redux-modal": "^2.0.2",
+    "redux-thunk": "^2.2.0",
+    "server": "^1.0.18"
   },
   "scripts": {
     "start": "react-scripts start",
