--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-slideshow-image": "^0.2.2",
+    "react-timestamp": "^4.4.0",
     "redux": "^4.0.0",
     "redux-modal": "^2.0.2",
     "redux-thunk": "^2.2.0",
